[project]
name = "funding-service-design-application-store"
version = "0.1.1"
description = "The funding service design application store for the DLUHC."
authors = ["Version One", "HM Government, Department of Levelling Up, Housing and Communities"]
license = "MIT License"

requires-python = ">=3.10, <3.11"
dependencies = [
    "apscheduler==3.10.4",
    "colored==2.2.4",
    "connexion[flask,swagger-ui,uvicorn]==3.1.0",
    "flask-apscheduler==1.13.1",
    "flask-migrate==4.0.7",
    "flask-restx==1.3.0",
    "flask-sqlalchemy==3.1.1",
    "flask==3.0.3",
    "funding-service-design-utils==5.0.8",
    "invoke==2.2.0",
    "jsonpath-rw-ext==1.2.2",
    "marshmallow-sqlalchemy==1.0.0",
    "openapi-spec-validator==0.7.1",
    "openpyxl==3.1.5",
    "pandas==2.2.2",
    "prance==23.6.21.0",
    "psycopg2-binary==2.9.9",
    "python-dateutil==2.9.0.post0",
    "requests==2.32.3",
    "slugify==0.0.1",
    "sqlalchemy-json==0.7.0",
    "sqlalchemy-utils==0.41.2",
    "sqlalchemy==2.0.31",
    "swagger-ui-bundle==1.1.0",
    "uvicorn==0.30.3",
]


[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "W",  # pycodestyle
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C90",  # mccabe cyclomatic complexity
    "G",  # flake8-logging-format
]
ignore = []
exclude = [
    "db/migrations/versions/",
    "venv*",
    ".venv*",
    "__pycache__",
]
mccabe.max-complexity = 12

[tool.uv]

[dependency-groups]
dev = [
    "asserts==0.13.1",
    "black==24.4.2",
    "click==8.1.7",
    "debugpy==1.8.2",
    "deepdiff==7.0.1",
    "flake8-pyproject==1.2.3",
    "moto[s3,sqs]==5.0.14",
    "pre-commit==4.0.1",
    "pytest==8.3.1",
    "pytest-env==1.1.3",
    "pytest-flask==1.3.0",
    "pytest-mock==3.14.0",
]
